added a funny rotation effect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <main class="page-wrap">
     <header>
-      <img src="logo.svg" width="100vw">
+      <img src="logo.svg" width="100vw" class="rotate">
       <h1>Henna</h1>
       <aside>a VSCode Colour Theme</aside>
     </header>
