updated site, moved logo to the theme.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main class="page-wrap">
     <header>
-      <img src="logo.svg" width="100vw" class="rotate">
+      <img src="vscode-henna/logo.svg" width="120px" class="rotate">
       <h1>Henna</h1>
       <aside>a VSCode Colour Theme</aside>
     </header>
@@ -19,7 +19,11 @@
 
     <p>Each colour is selected carefully to help legibility (with dyslexics like myself in mind).</p>
 
-    <img src="vscode-henna/henna-color-theme.png">
+    <p>Download the theme on the <a href="https://marketplace.visualstudio.com/items?itemName=httpsterio.henna">VSCode Extension marketplace</a> or <a href="https://github.com/httpsterio/vscode-henna">fork it on GitHub</a></p>
+
+    <p>Recommended font is <a href="https://github.com/tonsky/FiraCode">Fira Code</a> with <a href="https://github.com/tonsky/FiraCode/wiki/VS-Code-Instructions">font ligatures</a>.</p>
+
+    <a href="vscode-henna/henna-color-theme.png"><img src="vscode-henna/henna-color-theme.png" class="screenshot"></a>
   </section>
   <br>
   </main>
