--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Henna | VSCode Colour Theme</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 <body>
   <main class="page-wrap">
