--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Henna | VSCode Colour Theme</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-</head>
-<body>
-  <main class="page-wrap">
-    <header>
-      <img src="vscode-henna/logo.svg" width="120px" class="rotate">
-      <h1>Henna</h1>
-      <aside>a VSCode Colour Theme</aside>
-    </header>
-  <section>
-    <p>Henna is a colour theme for Visual Studio Code. It's utilizing the new theme standard that allows workbench colouring and it's not relying on the outdated Textmate theme format.</p>
+  <head>
+    <title>Henna | Visual Studio Code Theme</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  </head>
+  <body>
+    <main class="page-wrap">
+      <header>
+        <img src="vscode-henna/logo.svg" width="120px" class="rotate" />
+        <h1>Henna</h1>
+        <aside>a VSCode Colour Theme</aside>
+      </header>
+      <section>
+        <p>Henna is a colour theme inspired by my green-eyed redhead girl.</p>
 
-    <p>Each colour is selected carefully to help legibility (with dyslexics like myself in mind).</p>
+        <p>
+          The colors are carefully selected with legibility and people with
+          dyslexia in mind to create an accessible theme for Visual Studio Code
+        </p>
 
-    <p>Download the theme on the <a href="https://marketplace.visualstudio.com/items?itemName=httpsterio.henna">VSCode Extension marketplace</a> or <a href="https://github.com/httpsterio/vscode-henna">fork it on GitHub</a></p>
+        <p>
+          Download the theme on the
+          <a
+            href="https://marketplace.visualstudio.com/items?itemName=httpsterio.henna"
+            >VSCode Extension marketplace</a
+          >
+          or
+          <a href="https://github.com/httpsterio/vscode-henna"
+            >fork it on GitHub</a
+          >
+        </p>
 
-    <p>Recommended font is <a href="https://github.com/tonsky/FiraCode">Fira Code</a> with <a href="https://github.com/tonsky/FiraCode/wiki/VS-Code-Instructions">font ligatures</a>.</p>
+        <p>
+          Recommended font is
+          <a href="https://github.com/tonsky/FiraCode">Fira Code</a> with
+          <a href="https://github.com/tonsky/FiraCode/wiki/VS-Code-Instructions"
+            >font ligatures</a
+          >.
+        </p>
 
-    <a href="vscode-henna/henna-color-theme.png"><img src="vscode-henna/henna-color-theme.png" class="screenshot"></a>
-  </section>
-  <br>
-  </main>
-  <footer class="site-footer">
-    Made with ♥ for Henna by Sami.
-  </footer>
-</body>
+        <a href="vscode-henna/henna-color-theme.jpg"
+          ><img src="vscode-henna/henna-color-theme.jpg" class="screenshot"
+        /></a>
+      </section>
+      <br />
+    </main>
+    <footer class="site-footer">
+      Made with ♥ for Henna by Sami.
+    </footer>
+  </body>
 </html>
